make-a-wish-salesforce/src/objects/Wish_Budget__c.object
<CustomObject>
    <description>The Wish Budget captures all anticipated expenses for the Wish.</description>
    <fields>
        <fullName>Actual_Cash__c</fullName>
        <description>Roll-up Summary of Wish Expense: Actual Cash</description>
        <label>Actual Cash</label>
        <summarizedField>Wish_Expense__c.Actual_Cash__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Wish_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_In_Kind__c</fullName>
        <description>The total of the Actual In Kind values on the related Wish Expense.</description>
        <label>Actual In Kind</label>
        <summarizedField>Wish_Expense__c.Actual_In_Kind__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Wish_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Total__c</fullName>
        <description>Sum of Actual Cash and Actual In Kind, rolled up from the respective amounts on the Wish Expenses related to this Wish Budget.</description>
        <formula>Actual_Cash__c +  Actual_In_Kind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Approval_Status__c</fullName>
        <description>This field is populated by the approval process.</description>
        <label>Budget Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Approved_Date_Time__c</fullName>
        <description>Captures the date and time the budget was approved for use in the wish expense management user interface.  Exists in addition to the Budget Approved Date because historical data does not contain a time stamp.  Populated for records going forward via the approval process.</description>
        <label>Budget Approved Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Budget_Approved_Date__c</fullName>
        <description>The date on which the budget is approved. This field is populated by the approval process.</description>
        <label>Budget Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Cash__c</fullName>
        <description>The total of the budgeted Cash values on the related Wish Expenses.</description>
        <label>Budget Cash</label>
        <summarizedField>Wish_Expense__c.Budget_Cash__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Wish_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Description__c</fullName>
        <formula>IF(  Is_Active_Budget__c  ,"Active Budget","Archived Budget")+ " " + 
Name + " for " + 
 Wish_Child__c 
+ 
IF(!ISBLANK(TEXT( Budget_Approval_Status__c ))," - " + TEXT( Budget_Approval_Status__c ),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_In_Kind__c</fullName>
        <description>The total of the budgeted In Kind values on the related Wish Expenses.</description>
        <label>Budget In Kind</label>
        <summarizedField>Wish_Expense__c.Budget_In_Kind__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Wish_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Notes__c</fullName>
        <label>Budget Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Submitted_Date__c</fullName>
        <description>The date on which the budget is submitted for approval. This field is populated by the approval process.</description>
        <label>Budget Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <description>Sum of Budget Cash and Budget In Kind, rolled up from the respective amounts on the Wish Expenses related to this Wish Budget.</description>
        <formula>Budget_Cash__c +  Budget_In_Kind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GKTW_In_Kind_Value__c</fullName>
        <description>The total of all Budget In Kind amounts for the related Wish Expenses, where the Wish Expense Type is "Give Kids The World".</description>
        <inlineHelpText>Budget In Kind total for Give Kids The World expenses.</inlineHelpText>
        <label>GKTW In Kind Value</label>
        <summarizedField>Wish_Expense__c.Budget_In_Kind__c</summarizedField>
        <summaryFilterItems>
            <field>Wish_Expense__c.Hidden_Wish_Expense_Type__c</field>
            <operation>equals</operation>
            <value>Give Kids The World</value>
        </summaryFilterItems>
        <summaryForeignKey>Wish_Expense__c.Wish_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>High_Cost_Wish_Explanation__c</fullName>
        <description>Captures information explaining why a particular wish cost is higher that usual.</description>
        <label>High-Cost Wish Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active_Budget__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only one budget may be active per wish. Defaults to True as this assumes that whenever a new budget is created, that budget supersedes any older ones.</description>
        <label>Is Active Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_FE_Posted_Cash__c</fullName>
        <description>The sum of Posted Cash amounts from the associated Wish Expenses.</description>
        <label>Total Posted Cash</label>
        <summarizedField>Wish_Expense__c.FE_Posted_Cash__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Wish_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FE_Posted_In_Kind__c</fullName>
        <description>The sum of Posted In Kind amounts from the associated Wish Expenses.</description>
        <label>Total Posted In Kind</label>
        <summarizedField>Wish_Expense__c.FE_Posted_In_Kind__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Wish_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FE_Posted_In_Kind_to_Cash_Ratio__c</fullName>
        <description>Provides the percentage of In-Kind relative to the total of all In-Kind and Cash expenses.</description>
        <formula>IF(ISBLANK(Total_FE_Posted_Cash__c) &amp;&amp; ISBLANK(Total_FE_Posted_In_Kind__c), NULL,
IF(!ISBLANK(Total_FE_Posted_Cash__c) &amp;&amp; ISBLANK(Total_FE_Posted_In_Kind__c), 0,
IF(ISBLANK(Total_FE_Posted_Cash__c) = NULL &amp;&amp; !ISBLANK(Total_FE_Posted_In_Kind__c), 1,
IF(!ISBLANK(Total_FE_Posted_Cash__c) &amp;&amp; !ISBLANK(Total_FE_Posted_In_Kind__c), (Total_FE_Posted_In_Kind__c / (Total_FE_Posted_Cash__c + Total_FE_Posted_In_Kind__c)),NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Posted In-Kind to Cash Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wish_Case__c</fullName>
        <label>Wish Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Wish Budget</relationshipLabel>
        <relationshipName>Wish_Budget</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wish_Child__c</fullName>
        <formula>Wish_Case__r.Contact.FirstName + " " + Wish_Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish Child</label>
        <type>Text</type>
    </fields>
    <label>Wish Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Budget_Approval_Status__c</columns>
        <columns>Budget_Approved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WBN-{0}</displayFormat>
        <label>Wish Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Inactivate_Budget</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(Is_Active_Budget__c) &amp;&amp; Is_Active_Budget__c</errorConditionFormula>
        <errorMessage>Budgets cannot be set to Active once Inactivated</errorMessage>
    </validationRules>
</CustomObject>